# Projet-Majeure

./: CMakeCache.txt  CMakeLists.txt  ErodedBankScene.cpp  ErodedBankScene.h  Makefile  README.md  cmake_install.cmake  coastal-erosion  eroded_bank.pro  eroded_bank.py  imgui.ini  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: fish.frag  fish.vert  ocean.frag  ocean.vert  shader_mesh.frag  shader_mesh.vert  terrain.frag  terrain.vert  terrain_cpe.frag  terrain_cpe.vert  tree.frag  tree.vert
shaders/ocean/: ocean.frag.glsl  ocean.vert.glsl
src/: main.cpp  scene.cpp  scene.hpp
src/UI/: myWidgetGL.cpp  myWidgetGL.hpp  myWindow.cpp  myWindow.hpp
src/erosion/: erosion_system.cpp  erosion_system.hpp  hydraulic_erosion.cpp  hydraulic_erosion.hpp
src/fish/: fish_system.cpp  fish_system.hpp
src/ocean/: ocean.cpp  ocean.hpp
src/renderer/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
src/terrain/: bruit.cpp  bruit.hpp  diamond_square.cpp  diamond_square.hpp  map.cpp  map.hpp  scene.cpp  scene.hpp  terrain.cpp  terrain.hpp
src/trees/: tree_system.cpp  tree_system.hpp
